try to make a websocket
